# SQLiteCPP

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DB.hpp  main.cpp
src/Backend/: BTree.hpp  Cursor.cpp  Cursor.hpp  NodeFactory.hpp  OldBTree.hpp  Pager.cpp  Pager.hpp  Row.hpp  Serializer.hpp  Table.cpp  Table.hpp
src/Backend/BTree/: BTree.hpp  BTreeBase.hpp  BTreeForwardDeclares.hpp  InternalNode.hpp  LeafNode.hpp  NodeAllocator.hpp  NodePtr.hpp  RootNode.cpp  RootNode.hpp  Row.cpp  Row.hpp
src/Backend/MemoryMap/: MemoryMapAllocator.hpp
src/CLI/: Command.hpp  PrintConstants.hpp
src/Core/: CommandProcessor.hpp  VirtualMachine.hpp
test/: BTreeTest.cpp  CMakeLists.txt  MainTest.cpp
